--- a/portfolio1.html
+++ b/portfolio1.html
@@ -1,38 +1,38 @@
 <!doctype html>
-<html lang = "en">
-<head>
-<meta charset = "utf-8"/>
-<meta name = "viewport" content = "width = width-device, initial-scale = 1.0">
-<link rel = "stylesheet" href = "portfolio.css">
-<title>Portfolio</title>
-</head>
+<html lang="en">	
+	<head>
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=width-device, initial-scale=1.0">
+		<link rel="stylesheet" href="portfolio.css">
+		<title>Portfolio</title>
+        </head>
 <body>
-<div class = "main">
-	  <div class = "media">
-	      <img src = "https://bit.ly/2x84pL6" alt="logo">
-		    <form style="display: inline" action="http://www.i3indyatechnologies.com/" method="get">
-			     <button class = "button top">Visit Website</button>
-		    </form>	      
+<div class="main">
+	  <div class="media">
+	      <img src="https://bit.ly/2x84pL6" alt="logo">    
+	      <form style="display: inline" action="http://www.i3indyatechnologies.com/" method="get">
+		<button class="button top">About</button>
+	      </form>    
 	  </div>
-	      <img class = "middle" src = "https://bit.ly/2kmxZU7" alt = "i3indya">
+	      <img class="middle" src="https://bit.ly/2kmxZU7" alt="i3indya">
 	      <h1>Workshops We Offer</h1>
 	      <hr>
 	      <p>Organized workshops in more than 800+ colleges and trained more than 1,00,000+ students, i3indya is very well known companies in India's cream colleges like IIT Bombay, IIT Kanpur, IIT Roorkee, IIT Delhi, IIT Hyderabad, IIT Bhubaneshwar, NIT's and Top Deemed Universities of India.</p>
-	  <div class = "g1">
+	  <div class="g1">
 		      <div>
-		              <img class = "img1" src = "https://bit.ly/2s8cpWD" alt = "hacking">
-		              <a href = "https://bit.ly/2x3ilGa">CYBERSECURITY AND ETHICAL HACKING </a>            
+		              <img class="img1" src="https://bit.ly/2s8cpWD" alt="hacking">
+		              <a href="https://bit.ly/2x3ilGa">CYBERSECURITY AND ETHICAL HACKING </a>            
 		      </div>
 		      <div>
-		              <img class = "img2" src="https://bit.ly/2s2CirM" alt="robotics">
-		              <a href = "https://bit.ly/2IJRuR5">EMBEDDED SYSTEMS AND ROBOTICS</a>
+		              <img class="img2" src="https://bit.ly/2s2CirM" alt="robotics">
+		              <a href="https://bit.ly/2IJRuR5">EMBEDDED SYSTEMS AND ROBOTICS</a>
 		      </div>
 		      <div>
-		              <img class = "img3" src = "https://bit.ly/2IKmqAo" alt="application">
-		              <a href = "https://bit.ly/2kmuwVA">APPLICATION AND DEVOLOPMENT</a>
+		              <img class="img3" src="https://bit.ly/2IKmqAo" alt="application">
+		              <a href="https://bit.ly/2kmuwVA">APPLICATION AND DEVOLOPMENT</a>
 		      </div>
 	   </div>	   
-<footer>Designed by vyshnavi,<a href = "modified.html">i3 indya</a></footer>      
+<footer>Designed by vyshnavi,<a href="portfolio1.html">i3 indya</a></footer>	
 </div>
 </body>
 </html>
