--- a/portfolio1.html
+++ b/portfolio1.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=width-device, initial-scale=1.0">
-		<link rel="stylesheet" href="portfolio.css">
+		<link rel="stylesheet" href="portfolio1.css">
 		<title>Portfolio</title>
         </head>
 <body>
