--- a/portfolio1.html
+++ b/portfolio1.html
@@ -1,18 +1,23 @@
 <!doctype html>
-<html lang="en">	
+<html  lang="en">	
 	<head>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=width-device, initial-scale=1.0">
-		<link rel="stylesheet" href="portfolio1.css">
+		<link rel="stylesheet" href="portfolio.css">
 		<title>Portfolio</title>
+		<script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ="
+		crossorigin="anonymous"></script>
+		<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         </head>
-<body>
-<div class="main">
+ <body>
+   <div class="main">
 	  <div class="media">
 	      <img src="https://bit.ly/2x84pL6" alt="logo">    
-	      <form style="display: inline" action="http://www.i3indyatechnologies.com/" method="get">
-		<button class="button top">About</button>
-	      </form>    
+	      <h2>Vikas singh</h2>
+	  
 	  </div>
 	      <img class="middle" src="https://bit.ly/2kmxZU7" alt="i3indya">
 	      <h1>Workshops We Offer</h1>
@@ -24,7 +29,7 @@
 		              <a href="https://bit.ly/2x3ilGa">CYBERSECURITY AND ETHICAL HACKING </a>            
 		      </div>
 		      <div>
-		              <img class="img2" src="https://bit.ly/2s2CirM" alt="robotics">
+		              <img class="img2" src="https://bit.ly/2s2CirM" alt="robots">
 		              <a href="https://bit.ly/2IJRuR5">EMBEDDED SYSTEMS AND ROBOTICS</a>
 		      </div>
 		      <div>
@@ -32,7 +37,7 @@
 		              <a href="https://bit.ly/2kmuwVA">APPLICATION AND DEVOLOPMENT</a>
 		      </div>
 	   </div>	   
-<footer>Designed by vyshnavi,<a href="portfolio1.html">i3 indya</a></footer>	
-</div>
-</body>
+           <footer><b>Designed by vyshnavi,</b><a href="modified.html">i3 indya</a></footer> 	
+    </div>
+  </body>
 </html>
