--- a/portfolio1.html
+++ b/portfolio1.html
@@ -1,43 +1,55 @@
-<!doctype html>
-<html  lang="en">	
-	<head>
-		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=width-device, initial-scale=1.0">
-		<link rel="stylesheet" href="portfolio.css">
-		<title>Portfolio</title>
-		<script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ="
-		crossorigin="anonymous"></script>
-		<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        </head>
- <body>
-   <div class="main">
-	  <div class="media">
-	      <img src="https://bit.ly/2x84pL6" alt="logo">    
-	      <h2>Vikas singh</h2>
-	  
-	  </div>
-	      <img class="middle" src="https://bit.ly/2kmxZU7" alt="i3indya">
-	      <h1>Workshops We Offer</h1>
-	      <hr>
-	      <p>Organized workshops in more than 800+ colleges and trained more than 1,00,000+ students, i3indya is very well known companies in India's cream colleges like IIT Bombay, IIT Kanpur, IIT Roorkee, IIT Delhi, IIT Hyderabad, IIT Bhubaneshwar, NIT's and Top Deemed Universities of India.</p>
-	  <div class="g1">
-		      <div>
-		              <img class="img1" src="https://bit.ly/2s8cpWD" alt="hacking">
-		              <a href="https://bit.ly/2x3ilGa">CYBERSECURITY AND ETHICAL HACKING </a>            
-		      </div>
-		      <div>
-		              <img class="img2" src="https://bit.ly/2s2CirM" alt="robots">
-		              <a href="https://bit.ly/2IJRuR5">EMBEDDED SYSTEMS AND ROBOTICS</a>
-		      </div>
-		      <div>
-		              <img class="img3" src="https://bit.ly/2IKmqAo" alt="application">
-		              <a href="https://bit.ly/2kmuwVA">APPLICATION AND DEVOLOPMENT</a>
-		      </div>
-	   </div>	   
-           <footer><b>Designed by vyshnavi,</b><a href="modified.html">i3 indya</a></footer> 	
-    </div>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+    <link rel="stylesheet" href="port.css">
+    <title>Portfolio</title>   
+    <meta charset="utf-8"/>
+    <meta name = "viewport" content = "width=device-width, initial-scale = 1.0">
+    <script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ="
+                crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    </head>
+        <body>
+            <div class="main">
+                <header><img src="https://bit.ly/2x84pL6" alt="logo" class="logo">
+                    <h2>i3indya Technologies</h2>
+                </header>
+                <hr>
+                <img src="https://bit.ly/2kmxZU7" class="m" alt="mainimg">
+                    <section>
+                        <h1>Workshops we offer</h1>
+                    </section>
+                <p>Organized workshops in more than 800+ colleges and trained more than 1,00,000+ students, i3indya is very well known companies in India's cream colleges like IIT Bombay, IIT Kanpur, IIT Roorkee, IIT Delhi, IIT Hyderabad, IIT Bhubaneshwar, NIT's and Top Deemed Universities of India. </p>
+                <div class="row">
+                    <div class="column">
+                        <div class="content">
+                            <img src="https://bit.ly/2s8cpWD" alt="Hacking"  class="img" >
+                                    <a href="https://bit.ly/2x3ilGa">CYBERSECURITY AND ETHICAL HACKING</a> 
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="content">
+                            <img src="https://bit.ly/2s2CirM" alt="Robotics" class="img" >
+                                <a href="https://bit.ly/2IJRuR5">EMBEDDED SYSTEMS AND ROBOTICS</a> 
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="content">
+                            <img src="https://bit.ly/2IKmqAo" alt="Developement"  class="img" >
+                                <a href="https://bit.ly/2kmuwVA">APPLICATION AND DEVOLOPMENT</a>                            
+                        </div>
+                    </div>
+                </div>
+                <footer>
+                    <b>@contact us</b>
+                    <a href="http://www.i3indyatechnologies.com/#footer">i3indya</a>
+                </footer>
+
+<!-- END MAIN -->
+
+            </div>
+        </body>
 </html>
