--- a/portfolio1.html
+++ b/portfolio1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <link rel="stylesheet" href="portfolio1..css" type="text/css">
+    <link rel="stylesheet" href="portfolio1.css" type="text/css">
     <title>Portfolio</title>   
     <meta charset="utf-8"/>
     <meta name = "viewport" content = "width=device-width, initial-scale = 1.0">
